 - Added: Ingame font to Trainer and Hall of Fame windows.
 - Added: Deletion of Hall of Fame Entries (except First Clear), and Deletion of Favorite Secret Bases.
 - Added: Loading of multiple Wondercards via Drag & Drop.
 - Added: Boot Status to help debug some users being stuck on the splash screen.
 - Added: Event Constant editing to Event Flag window.

3/1/15 - New Update: (570)
 - Added: QR Code Generation; click "QR!" and a QR window will appear with a scannable image. Requires an active internet connection.
 - Added: QR Code to Tabs; hold ALT when clicking "QR!" after copying the URL of the QR to your clipboard (CTRL-C). Requires internet.
 - Added: Decrypted Battle Video scraping for ek6 data; battle stats are not kept.
 - Added: ramsavs can now be loaded in the Event Flag Editor's FlagDiff researcher.
 - Added: Nature stat +/- on hover of Nature ComboBox (arrow). Thanks swarley!
 - Added: Box Data Report now shows level and the proper Language/3DS region text will display. Thanks Kaisonic!
 - Added: More Trainer Stat descriptions. Thanks codem8kr & Luciela!
 - Fixed: Memory text prediction should no longer list the wrong text. Thanks Ceveth & evandixon!
 - Fixed: Wondercard flags greater than 2047 will not be erroneously added to the received list.
 - Fixed: Shedinja HP stat prediction should now properly show something not '1'.
 - Fixed: Jellicent/Meowstic sprites now update properly and have their forms. Thanks Favna & sora10pls!
 - Fixed: Xerneas sprite forms being inverted. Thanks trainboy2019!
 - Fixed: CTRL+X will no longer close the program. Thanks forsureitsme!
 - Fixed: Encounter Types are now included for uncommon Pt/HGSS types. Thanks The_RickyAll!
 - Changed: Checksum validity checking disabled for ramsavs.
 - Changed: ID numbers with a prepended Zero will not be auto trimmed.
 - Changed: Window sizing for mono compatibility on Inventory and other editors. Thanks SoujiSeta!
 - Changed: Chinese Translation text improved. Thanks piva223!